Archive2/70/c898f73d057a7f/output
main.cpp:15:5: error: '_init' does not name a type
     _init init_vec()
     ^
main.cpp: In constructor 'B::B()':
main.cpp:22:22: error: 'init_vec' was not declared in this scope
     B() : A(init_vec())
                      ^
